# get_poi-osm

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: quality_security.yml
include/: PoiOsm.hpp
src/: PoiOsm.cpp  main.cpp
